Fix visibility inside tab

--- a/src/scss/components/_tabs.scss
+++ b/src/scss/components/_tabs.scss
@@ -10,7 +10,7 @@
     }
     .tab-content {
         position: relative;
-        overflow: hidden;
+        overflow: visible;
         display: flex;
         flex-direction: column;
         padding: 1rem;
